--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title : Tseh Kokou Benoit
-#logo : 
+logo : /assets/img/benoit.svg
 #description: text en bas de l image
 #shows_downloads: True
 theme: jekyll-theme-minimal
