--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,14 @@
 # Configuration de base
 title : Tseh Kokou Benoit
 logo : /assets/img/benoit.svg
-description: Big Data Cloud Computing
-shows_downloads: true
+description: Big Data and Cloud Computing
+#show_downloads: true
 url: "https://Believer2001.github.io/DataPortfolio" # 
-#baseurl: "" # Laisser vide si tu n'as pas de sous-répertoire
 email: "tsehbenoit2001@gmail.com" 
 github_username: "Believer2001" # 
 linkedin_username: "Tseh Kokou Benoit" 
+#baseurl: "" # Laisser vide si tu n'as pas de sous-répertoire
 #resume_url: ".pdf" # 
-
-
-
 #theme principale 
 
 theme: jekyll-theme-minimal
