--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: Big Data and Cloud Computing
 email: "tsehbenoit2001@gmail.com" 
 github_username: "Believer2001" # 
 linkedin_username: "Tseh Kokou Benoit" 
-social:
+social_links:
   github: "https://github.com/Believer2001"  # GitHub link
   linkedin: "https://www.linkedin.com/in/tsehkokoubenoit"
 
