--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@ logo : /assets/img/benoit.svg
 description: Big Data and Cloud Computing
 #show_downloads: true
 #url: "https://Believer2001.github.io/DataPortfolio" # 
-email: "tsehbenoit2001@gmail.com" 
-github_username: "Believer2001" # 
-linkedin_username: "Tseh Kokou Benoit" 
-social_links:
-  github: "https://github.com/Believer2001"  # GitHub link
-  linkedin: "https://www.linkedin.com/in/tsehkokoubenoit"
+#email: "tsehbenoit2001@gmail.com" 
+#github_username: "Believer2001" # 
+#linkedin_username: "Tseh Kokou Benoit" 
+#social_links:
+#  github: "https://github.com/Believer2001"  # GitHub link
+ # linkedin: "https://www.linkedin.com/in/tsehkokoubenoit"
 
 #baseurl: "" # Laisser vide si tu n'as pas de sous-répertoire
 #resume_url: ".pdf" # 
